deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-example
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
