deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: fastapi-example.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fastapi-example
                port:
                  number: 80
